[feat] Shell Running